# zonevert

./: .gitignore  LICENSE  README.md  TODO.md  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  vite.config.ts
.github/workflows/: release.yml
migrate/: 01-setup.md  02-ipc-mapping.md  03-rust-backend.md  04-frontend.md  05-build-release.md  06-checklist.md  07-svelte-frontend.md  README.md
scripts/: clean-artifacts.cjs  dev.js  fetch-ffmpeg.mjs  install-electron-runtime.cjs  sync-version.mjs
src/: conversion-plan.js  index.html  ipc-validation.js  main.js  main.ts  preload.js  progress-parser.js  queue-state.js  renderer.js  styles.css
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  ffmpeg.rs  lib.rs  main.rs  state.rs
src/lib/: bindings.ts
src/lib/components/: AdvancedPanel.svelte  App.svelte  CommandPanel.svelte  Icon.svelte  LogPanel.svelte  NamingPanel.svelte  OutputPanel.svelte  QueuePanel.svelte  ResizePanel.svelte  SourcePanel.svelte  StatusBar.svelte  SummaryStrip.svelte  Topbar.svelte  Workspace.svelte
src/lib/logic/: conversion-plan.ts  ipc-validation.ts  progress-parser.ts  queue-state.ts
src/lib/stores/: app-state.svelte.ts
tests/: conversion-plan.test.cjs  integration.test.cjs  ipc-validation.test.cjs  progress-parser.test.cjs  queue-state.test.cjs
