[package]
name = "zonevert"
version = "0.3.6"
description = "A cross-platform desktop UI for batch image conversion with FFmpeg."
authors = ["Zonevert Maintainers <maintainers@zonevert.dev>"]
license = "MIT"
repository = "https://github.com/4imd3v/zonevert.git"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "zonevert_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-notification = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["process", "io-util", "sync", "rt-multi-thread", "macros"] }
base64 = "0.22"

# kill-by-PID for the cancel path (see state.rs / kill_pid).
[target.'cfg(unix)'.dependencies]
nix = { version = "0.29", features = ["signal"] }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_Foundation", "Win32_System_Threading"] }

[features]
# default = ["custom-protocol"]   # enable for production asset protocol
